extras/k8s/deployment.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: web
  namespace: noty
  labels:
    app: web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
        name: web
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - image: gcr.io/google-containers/echoserver:1.10
        imagePullPolicy: Always
        name: web
        ports:
        - containerPort: 8080
          name: web
